--- a/MSAToolBox/App.config
+++ b/MSAToolBox/App.config
@@ -6,7 +6,7 @@
     <system.serviceModel>
         <bindings>
             <netTcpBinding>
-                <binding name="Legacy">
+                <binding name="Legacy" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647">
                     <security mode="None" />
                 </binding>
             </netTcpBinding>
