--- a/MSAToolBox/MSAToolBox.csproj
+++ b/MSAToolBox/MSAToolBox.csproj
@@ -62,6 +62,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Controls\LegacyMorpher.xaml.cs">
+      <DependentUpon>LegacyMorpher.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Legacy\CreatureGossipPanel.xaml.cs">
       <DependentUpon>CreatureGossipPanel.xaml</DependentUpon>
     </Compile>
@@ -93,6 +96,10 @@
     </Compile>
     <Compile Include="Utility\Converter.cs" />
     <Compile Include="Utility\DBC.cs" />
+    <Page Include="Controls\LegacyMorpher.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\Legacy\CreatureGossipPanel.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
