--- a/MSAToolBox/App.config
+++ b/MSAToolBox/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
@@ -11,15 +11,15 @@
     <bindings />
     <client />
   </system.serviceModel>
-  <connectionStrings>
-    <add name="LegacyWorldEntities" connectionString="metadata=res://*/LegacyWorld.csdl|res://*/LegacyWorld.ssdl|res://*/LegacyWorld.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=msa;database=original_world&quot;" providerName="System.Data.EntityClient" />
-    <add name="LegacyDataEntities" connectionString="metadata=res://*/LegacyData.csdl|res://*/LegacyData.ssdl|res://*/LegacyData.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=msa;database=legacy_data&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="LegacyDataEntities" connectionString="metadata=res://*/LegacyData.csdl|res://*/LegacyData.ssdl|res://*/LegacyData.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=msa;database=legacy_data&quot;" providerName="System.Data.EntityClient" /><add name="LegacyWorldEntities" connectionString="metadata=res://*/LegacyWorld.csdl|res://*/LegacyWorld.ssdl|res://*/LegacyWorld.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=v4_world&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="v12.0" />
       </parameters>
     </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
   </entityFramework>
 </configuration>
