一些简单的结构调整。

--- a/MSAToolBox/App.config
+++ b/MSAToolBox/App.config
@@ -11,15 +11,14 @@
     <bindings />
     <client />
   </system.serviceModel>
-  <connectionStrings><add name="LegacyDataEntities" connectionString="metadata=res://*/LegacyData.csdl|res://*/LegacyData.ssdl|res://*/LegacyData.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=msa;database=legacy_data&quot;" providerName="System.Data.EntityClient" /><add name="LegacyWorldEntities" connectionString="metadata=res://*/LegacyWorld.csdl|res://*/LegacyWorld.ssdl|res://*/LegacyWorld.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=v4_world&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <add name="LegacyWorldEntities" connectionString="metadata=res://*/LegacyWorld.csdl|res://*/LegacyWorld.ssdl|res://*/LegacyWorld.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=v4_world&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="v12.0" />
       </parameters>
     </defaultConnectionFactory>
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
   </entityFramework>
 </configuration>
